--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,102 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+button {
+  color: white;
+}
+.video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
+.videoBoxSmall {
+  position: fixed;
+  bottom: 30px;
+  left: 30px;
+  width: 100px;
+  height: 200px;
+  transition: 0.5s ease;
+  
+  border-radius: 15px;
+  box-shadow: black 0 3px 8px;
+}
+.videoBoxSmall:hover {
+  transform: scale(1.045);
+}
+.videoBoxBig {
+  position: fixed;
+  bottom: 30px;
+  left: 30px;
+  width: 330px;
+  height: 660px;
+  transition: 0.5s ease;
+  border-radius: 15px;
+  box-shadow: black 0 3px 8px;
+}
+.increaseButton {
+  position: absolute;
+  top: 44%;
+  left: 42%;
+  color: white;
+  transition: 0.5s ease;
+}
+.decreaseButton {
+  position: absolute;
+  top: 30px;
+  right: 15px;
+  color: white;
+  transition: 0.5s ease;
+}
+.muteButton {
+  position: absolute;
+  bottom: 120px;
+  color: white;
+  right: 15px;
+  transition: 0.5s ease;
+}
+.toggleButton {
+  position: absolute;
+  bottom: 70px;
+  right: 20px;
+  color: white;
+  transition: 0.5s ease;
+}
+.increaseButton:hover {
+  transform: scale(1.1);
+}
+.decreaseButton:hover {
+  transform: scale(1.1);
+}
+.muteButton:hover {
+  transform: scale(1.1);
+}
+.toggleButton:hover {
+  transform: scale(1.1);
+}
+.aboutPopUp{
+  position: absolute;
+  color: white;
+  bottom:60px;
+  left: 15px;
+  width: 80%;
+  font-size: 13px;
+  font-weight: 700;
+}
+.mainButton{
+  position: absolute;
+  bottom: 15px;
+  width: 80%;
+  left: 10%;
+  background-color: rgb(37, 96, 216);
+  border: none;
+  border-radius: 25px;
+  font-size: 20px;
+  font-weight: 800;
+  line-height: 35px;
 }
